--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -52,6 +52,111 @@
 <script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "Case and Stand for 9.7-inch iPad Pro";amzn_assoc_default_category = "All";amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";amzn_assoc_title = "Shop Related Products";amzn_assoc_rows = "5";amzn_assoc_design = "text_links";</script>
     <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
 
+<div class="card clearfix" data-score="27" data-price="21.83">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/316psrz"><img src="https://images-na.ssl-images-amazon.com/images/I/A1GkFJgIsDL._SX679_.jpg" alt="Sweet Home Stores Cozy Shag Collection Solid Shag Rug" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,991 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/316psrz">Sweet Home Stores Cozy Shag Collection Solid Shag Rug Contemporary Living & Bedroom Soft Shaggy Area Rug,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.83</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/316psrz">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="15.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30YNtAK"><img src="https://images-na.ssl-images-amazon.com/images/I/71jtGZ%2BZ88L._SX522_.jpg" alt="Microwave Rice Cooker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>252 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30YNtAK">Joseph Joseph 45002 M-Cuisine Microwave Rice Cooker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$15.00</span><span class="ori_price">$25.00</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30YNtAK">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="26" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/332F6pR"><img src="https://images-na.ssl-images-amazon.com/images/I/71ih-QWWpuL._SX522_.jpg" alt="Skip Hop Moby Bath Spout Cover Universal Fit" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,525 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>26% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/332F6pR">Skip Hop Moby Bath Spout Cover Universal Fit, Blue </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.59</span><span class="ori_price">$13.00</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/332F6pR">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="8.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LP3R3l"><img src="https://images-na.ssl-images-amazon.com/images/I/A1yI%2BN4UBDL._SX522_.jpg" alt="Swing-A-Way Comfort Grip Jar Opener" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,641 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LP3R3l">Swing-A-Way Comfort Grip Jar Opener, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$8.94</span><span class="ori_price">$13.36</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LP3R3l">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="10.85">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31aK9Tn"><img src="https://images-na.ssl-images-amazon.com/images/I/81O7kW9xsRL._SX522_.jpg" alt="Burger Press" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,005 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31aK9Tn">Cuisinart CSBP-100 3-in-1 Stuffed Burger Press, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$10.85</span><span class="ori_price">$14.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31aK9Tn">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="32" data-price="20.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K6shn0"><img src="https://images-na.ssl-images-amazon.com/images/I/714bKCXtRVL._SX522_.jpg" alt="Original Exfoliant Foot Peel" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>11,500 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K6shn0">Baby Foot - Original Exfoliant Foot Peel - 2.4 Fl. Oz. Lavender Scented Pair </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$20.49</span><span class="ori_price">$29.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2K6shn0">Shop Now at Amazon</a></div>
+</div>
 
 <div class="card dealofday clearfix" data-score="72" data-price="discounted_price">
   <div class="image_box">
