--- a/app/views/deals/_body_editors_pick.html.erb
+++ b/app/views/deals/_body_editors_pick.html.erb
@@ -10,7 +10,7 @@
  -->
 
  <!-- Categories : coupons, sales, promotions, brands -->
- <div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+ <div class="filter-node editors_box" data-filter='["electronic","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -22,7 +22,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["electronic","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61vwrri0ZBL._AC_SL1500_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -34,7 +34,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/91TBNEBXK0L._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -46,7 +46,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/71FxeMlMvkL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -58,7 +58,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61037gzXCTL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -70,7 +70,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
- <div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+ <div class="filter-node editors_box" data-filter='["outdoor","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -82,7 +82,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["outdoor","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61vwrri0ZBL._AC_SL1500_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -94,7 +94,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["outdoor","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/91TBNEBXK0L._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -106,7 +106,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["home","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/71FxeMlMvkL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
@@ -118,7 +118,7 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["home","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61037gzXCTL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
