--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -31,7 +31,7 @@
                   <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
                   <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
                   <li class="about_db_dis">
-                    <p>What is "Extra Discount"?</p>
+                    <p>What the "Extra Discount" is?</p>
                     <span class="double red">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
                     <span class="double green">Extra Discount</span>
@@ -67,7 +67,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes | Hand-Pick On Amazon Jul. 31. 2019.</h2>
+          <h2>Promotion Codes | Hand-Pick On Amazon Aug. 01. 2019.</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -99,7 +99,7 @@
  -->
             <%= render 'deals/body_promocode' %>
           </div>
-          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_03">GO TO PROMO CODES OF YESTERDAY</a></h2>
+          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_05">GO TO PROMO CODES OF YESTERDAY</a></h2>
           
         </div><!--./rt_cnt-->    
 
