--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -15,6 +15,7 @@
   .codes .lt_cnt .last7days_pc>ul>li>a{text-decoration:none;color:#fff;display:block;font-size:15px;padding:5px 15px;background:#08f;margin:5px;border-radius:10px;}
   .codes .lt_cnt .bestdeals>ul>li>a{background:#87c442;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis{}
+  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis p{margin-bottom:5px;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.double{color:#fff;padding:0 10px;border-radius:10px;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.red{background:#ff4d4d;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.green{background:#87c442;}
@@ -151,13 +152,13 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:350px;background:#ff4d4d;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green{margin-left:10px;position:relative;display:inline;background:#87c442;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:400px;background:#87c442;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:350px;background:#87c442;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange{margin-left:10px;position:relative;display:inline;background:#e47911;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:400px;background:#e47911;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:350px;background:#e47911;padding:5px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
