--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -30,11 +30,11 @@
               <a href="#n">HOW TO USE</a>
               <ul>
                 <li class="about_db_dis">
-                  <p>What is "Extra Discount"?</p>
+                  <p>What the "Extra Discount" is?</p>
                   <span class="double orange">Extra Discount</span>
-                  <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
-                  <span class="double purple">Extra Discount</span>
-                  <em>You can get discount with clipping coupon on the prodcut page.</em>
+                  <em>You can get extra discount by clipping coupon to the product that is being discounting.</em>
+                  <span class="double purple">Coupon</span>
+                  <em>You can get discount by clipping coupon on the prodcut page.</em>
                 </li>
               </ul>
             </li>
@@ -66,7 +66,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | Hand-Pick On Amazon Jul. 31. 2019.</h2>
+        <h2>Daily Deals | Hand-Pick On Amazon Aug. 01. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -83,7 +83,7 @@
           <%= render 'shared/amz_search' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_07">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_01">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
