--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -25,6 +25,15 @@
           <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
         </div> -->
 
+        <div class="filter-node promotion_box" data-filter='["Categories","gift for who is crazy about organizing something everywhere"]'>
+          <div class="image_box"><a href="/guides/guide_05"><img src="Image_URL" alt=""></a></div>
+          <div class="node-box inner">
+            <h2><a href="/guides/Guide_Link">gift for who is crazy about organizing something everywhere</a></h2>
+            <span>Last Updated: Mon. Day. 2019</span>
+          </div>
+          <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
+        </div>
+
         <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about Mickey Mouse"]'>
           <div class="image_box"><a href="/guides/guide_04"><img src="https://images.unsplash.com/photo-1528066588405-9e20509b9e34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="mickeymouse"></a></div>
           <div class="node-box inner">
@@ -60,6 +69,8 @@
           </div>
           <div class="btn"><a href="/guides/guide_01">Read More</a></div>
         </div>
+
+        
 
       
       </div><!--./guide_wrap-->
