--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -6,6 +6,7 @@
 .blog_body .box_top{margin-top:35px;}
 .blog_body .school_box .left_side{float:left;width:30%;font-family: 'Anton', sans-serif;}
 .blog_body .school_box .left_side a{background:#000;color:#fff;padding:30px 30px;display:block;text-decoration:none;text-align:center;font-size:30px;font-weight:bold;}
+.blog_body .school_box .left_side .bts_fontsize_hann{padding:10px;font-size:26px;}
 .blog_body .school_box .left_side img{width:100%;}
 .blog_body .school_box .right_side{float:left;width:65%;margin-left:3%;}
 .blog_body .school_box .right_side h2{}
