--- a/app/views/blogs/blog_03_backtoschool.html.erb
+++ b/app/views/blogs/blog_03_backtoschool.html.erb
@@ -189,6 +189,22 @@
           </div>        
         </div>    
 
+         <div class="school_box clearfix">
+          <div class="left_side"><a target="_blank" href="https://bit.ly/2ypx4Jx">jcrew</a></div>
+          <div class="right_side">
+            <h2><a target="_blank" href="https://bit.ly/2ypx4Jx">UP TO 60% OFF BACK-TO-SCHOOL STYLES</a></h2>
+            <div class="btn"><a target="_blank" href="https://bit.ly/2ypx4Jx">Shop Now</a></div>
+          </div>        
+        </div>   
+
+        <div class="school_box clearfix">
+          <div class="left_side"><a class="bts_fontsize_hann" target="_blank" href="https://bit.ly/2KmFjLM">hannaandersson</a></div>
+          <div class="right_side">
+            <h2><a target="_blank" href="https://bit.ly/2KmFjLM">30% Off everything even new arrivals for back to school!! use code "SAVEONALL"</a></h2>
+            <div class="btn"><a target="_blank" href="https://bit.ly/2KmFjLM">Shop Now</a></div>
+          </div>        
+        </div>        
+
         <div class="school_box clearfix">
           <div class="left_side"><a target="_blank" href="https://bit.ly/32UGhHS">Nordstrom<br />Rack</a></div>
           <div class="right_side">
