--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -44,6 +44,101 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="80" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2yyvJQo"><img src="https://m.media-amazon.com/images/I/61UkV3r1KrL._SR400,400_.jpg" alt="ShenMate Portable Steamer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>9 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2yyvJQo">ShenMate Portable Steamer for Clothes, Handheld Fabric Garment Steamer Perfect for Travel and Home, Fast Heat-Up...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$89.99</span></address>
+      <textarea readonly="readonly" class="code_area">80K7RZGA</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>80% off at $89.99</strong> with promo code: <strong class="m_codes">80K7RZGA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2yyvJQo">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="24.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GCL0Ef"><img src="https://m.media-amazon.com/images/I/614iG07OCBL._SR400,400_.jpg" alt="Portable Charger Power Bank 20000mAh" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>30 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GCL0Ef">Portable Charger Power Bank 20000mAh Soluser High Capacity External Battery Pack with 3 Input, 4 LED Lights...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.49</span><span class="ori_price">$34.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">30ZDEGNP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $34.99</strong> with promo code: <strong class="m_codes">30ZDEGNP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GCL0Ef">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="20.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/318i2Eg"><img src="https://m.media-amazon.com/images/I/61Urvle868L._SR400,400_.jpg" alt="ZOCAI Tote Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>9 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/318i2Eg">ZOCAI Tote Bag for Women Fashion Shoulder Bags Casual Travel Handbags Top Handle Handbag with Adjustable Strap</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.89</span><span class="ori_price">$37.99</span></address>
+      <textarea readonly="readonly" class="code_area">459G8Y3T</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $37.99</strong> with promo code: <strong class="m_codes">459G8Y3T</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 10, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/318i2Eg">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="6.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OA1fIL"><img src="https://m.media-amazon.com/images/I/616MKZWWcdL._SR400,400_.jpg" alt="TENMOS T85 Rechargeable Wireless Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>49 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OA1fIL">TENMOS T85 Rechargeable Wireless Mouse, 2.4G USB LED Optical Silent Computer Wireless Mice, Auto Sleeping,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.40</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">60R4O48B</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $15.99</strong> with promo code: <strong class="m_codes">60R4O48B</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OA1fIL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MwleWf"><img src="https://m.media-amazon.com/images/I/71RbLJgxGDL._SR400,400_.jpg" alt="USB C Hub 3.0 Powered" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>13 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MwleWf">USB C Hub 3.0 Powered - Fansteck USB Hub Type C for Laptop MacBook Pro 4 USB Ports 3.0 Fast Speed and 1 USB...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">50XEP66X</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50XEP66X</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MwleWf">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="6.96">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Ywf2Qh"><img src="https://m.media-amazon.com/images/I/71ilW910BpL._SR400,400_.jpg" alt="Pantene" /></a>
