--- a/app/views/deals/_navbar_editor.html.erb
+++ b/app/views/deals/_navbar_editor.html.erb
@@ -24,11 +24,11 @@
   
   <div class="editor_mobile">
     <div class="filter-search guide_controll">
-      <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
+      <button class="filter-button btn btn-md btn-primary all" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text" data-filter="electronic">Electronic</button>
       <button class="filter-button btn btn-md" data-filter="kitchen">Kitchen</button>
       
-      <ul class="dropmenu ilter-button btn">
+      <ul class="dropmenu filter-button btn">
         <li class="dir"><a href="#">More</a>
           <ul>
             <li><button class="filter-button btn btn-md" data-filter="home">Home</button></li>
