--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -357,11 +357,12 @@
 /* For Editors' Pick */
 .editor_mobile{display:none;}
 .header_short_sub_nav{margin-top:90px;}
-.editors_pick{}
 .editors_pick .editors_box{float:left;width:18%;margin:0 1% 5% 1%;height:400px;}
-.editors_pick .editors_box img{width:100%;height:200px;object-fit:contain;}
+.editors_pick .editors_box img{width:100%;height:200px;object-fit:contain;padding:15px;}
+.editors_pick .editors_box .rating img{height:16px;padding:0;}
+.editors_pick .editors_box .rating p{text-align:center;font-size:13px;margin-top:-10px;}
 .editors_pick .editors_box .inner{padding:7px;}
-.editors_pick .editors_box .inner p{line-height:1.3;}
+.editors_pick .editors_box .inner p{line-height:1.3;height:3.9em;overflow:hidden;}
 .editors_pick .editors_box .inner p a{text-decoration:none;color:#000;}
 .editors_pick .editors_box .pricing{margin:10px 0;padding:7px;color:#000;}
 .editors_pick .editors_box .pricing span{font-size:15px;}
@@ -372,10 +373,8 @@
 .editors_pick .editors_box .btn a{background:#000;color:#fff;text-decoration:none;padding:10px;display:block;border-radius:15px;}
 
 
-
 /* Drop Menu for Editors' Pick */
 .dropmenu{width:145px;display:inline-block;vertical-align:middle;}
-/*.dropmenu ul{margin: 0;padding: 0;}*/
 .dropmenu li{float:left;list-style:none;position:relative;background:#000;color:#fff;}
 .dropmenu li button{background:#000;}
 .dropmenu li a{text-decoration:none;color:#fff;display:block;padding:0.5em 1em;margin-left:15px;font-family: 'Montserrat', sans-serif;}
@@ -385,15 +384,20 @@
 .dropmenu li:hover>ul{display:block;}
 .dropmenu li.dir>a:after{content: " +";color:#fff;}
 .dropmenu:after{content: "";display:table;clear:both;}
+
+@media screen and (max-width:400px){.editors .editor_mobile .guide_controll .btn{font-size:15px;}  }
 @media screen and (max-width:640px){
   .editor_mobile{display:block;}
   .editors .editor_mobile .filter-search{margin:0;}
   .editors .editor_mobile button.btn-md{margin-top:10px;text-align:left;}
+  .editors .editor_mobile button.all{margin-left:15px;}
+  .editors .editor_mobile .dropmenu .btn{letter-spacing:0;}
   .editors .editor_mobile .dropmenu{width:100px;}
-  .editors .editor_mobile .dropmenu ul{margin-top:10px;} 
+  .editors .editor_mobile .dropmenu ul{margin-top:20px;} 
   .editors .editor_mobile .dropmenu ul li button{width:104px;margin:0 0 15px 10px;}
   .editors .editor_mobile .dropmenu li{margin-top:-12px;}
   .editors .editor_mobile .dropmenu li a{padding:0;margin:0;}
+  .editors .editor_mobile .dropmenu li ul{left:-4px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .header_short_sub_nav{margin-top:80px;}
