--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -184,7 +184,7 @@
 
 
 /* Begin Gift Guide Main Page */
-.guide_wrap{margin:30px 0 0 0;font-family: 'Montserrat', sans-serif;} 
+.guide_wrap{margin:50px 0 0 0;font-family: 'Montserrat', sans-serif;} 
 .guide_wrap .guide_box{float:left;width:31.33%;margin:0 1% 70px 1%;}
 .guide_wrap .guide_box .image{height:250px;}
 .guide_wrap .guide_box .image img{width:100%;height:100%;}
@@ -541,7 +541,7 @@
 .filter-node.filter-me {opacity:0 !important; visibility:hidden; position:absolute; top: 2000px;}
 
 @media screen and (max-width:640px){
-  .promotions .guide_controll .btn{margin:0 3.3%;}
+  .promotions .guide_controll .btn{margin:0 2%;letter-spacing:1.6px;}
   .promotions .promotion_box .inner h2 a:hover{text-decoration:none;}
   .promotions .promotion_box{float:none;width:100%;margin-bottom:35px;}
   .promotions .guide_controll .form-control{width:95%;margin:10px 2.5%;}
