--- a/app/views/deals/_body_editors_pick.html.erb
+++ b/app/views/deals/_body_editors_pick.html.erb
@@ -1,5 +1,6 @@
 <!-- <div class="filter-node promotion_box" data-filter='["Category","Promotions_Title"]'>
   <a target="_blank" href="Promotions_URL"><img src="Image_URL" alt="Img_descriptions"></a>
+  <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
   <div class="node-box inner">
     <h2><a target="_blank" href="Promotions_URL">Promotions_Title</a></h2>
     <p>Promotions_Descriptions</p>
@@ -10,8 +11,9 @@
  -->
 
  <!-- Categories : coupons, sales, promotions, brands -->
- <div class="filter-node editors_box" data-filter='["electronic","Amazon Gold Box and Lightning Deals"]'>
+ <div class="filter-node editors_box" data-filter='["electronic","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -24,6 +26,7 @@
 
 <div class="filter-node editors_box" data-filter='["electronic","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61vwrri0ZBL._AC_SL1500_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -36,6 +39,7 @@
 
 <div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/91TBNEBXK0L._SX679_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -48,6 +52,7 @@
 
 <div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/71FxeMlMvkL._SX679_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -60,6 +65,7 @@
 
 <div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61037gzXCTL._SX679_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
