--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -152,13 +152,13 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:350px;background:#ff4d4d;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:270%;background:#ff4d4d;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green{margin-left:10px;position:relative;display:inline;background:#87c442;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:350px;background:#87c442;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:270%;background:#87c442;padding:5px;color:white;text-align:center;position:absolute;z-index:1;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange{margin-left:10px;position:relative;display:inline;background:#e47911;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:350px;background:#e47911;padding:5px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:270%;background:#e47911;padding:5px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
@@ -387,6 +387,9 @@
 
 @media screen and (max-width:400px){.editors .editor_mobile .guide_controll .btn{font-size:15px;}  }
 @media screen and (max-width:640px){
+  .editors_pick .editors_box{float:left;width:48%;margin:0 1% 5% 1%;height:400px;}
+ 
+  /* Mobile */
   .editor_mobile{display:block;}
   .editors .editor_mobile .filter-search{margin:0;}
   .editors .editor_mobile button.btn-md{margin-top:10px;text-align:left;}
@@ -400,6 +403,7 @@
   .editors .editor_mobile .dropmenu li ul{left:-4px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
+  .editors_pick .editors_box{float:left;width:31.33%;margin:0 1% 5% 1%;height:400px;}
   .header_short_sub_nav{margin-top:80px;}
   .dropmenu li a{padding:0;margin-left:33px;}
 }
